# llm-sql

./: llm-sql.ipynb  pyproject.toml
