[tool.poetry]
name = "llm-with-semantic-layer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.1.12"
jupyterlab = "^4.1.5"
langchain-community = "^0.0.28"
arize-phoenix = "^3.17.0"
protobuf = "3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
